--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@
             background: var(--secondary-color);
         }
     </style>
-</head>
+</head><script src="supabase-integration.js"></script>
 <body>
      Loading Screen 
     <div class="loading-screen" id="loadingScreen">
