--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@
             background: var(--secondary-color);
         }
     </style>
-</head><script src="supabase-integration.js"></script>
+</head>
 <body>
      Loading Screen 
     <div class="loading-screen" id="loadingScreen">
@@ -2339,5 +2339,15 @@ Sunday: 11AM-6PM</p>
     <div class="overlay" id="overlay"></div>
 
     <script src="script.js"></script>
+    
+    <!-- Supabase CDN -->
+<script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm"></script>
+
+<!-- Hamara code -->
+<script type="module" src="./supabase.js"></script>
+
+<!-- Tumhara existing JS -->
+<script type="module" src="./script.js"></script>
+
 </body>
 </html>
